--- a/pom.xml
+++ b/pom.xml
@@ -10,11 +10,16 @@
     <version>1.0-SNAPSHOT</version>
     <modules>
         <module>book</module>
+        <module>framework</module>
     </modules>
     <!--<groupId>xyz.wenjiesx.book</groupId>
     <artifactId>thinking-in-java</artifactId>
     <version>1.0-SNAPSHOT</version>
 -->
 
+    <properties>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
+    </properties>
 
 </project>
