--- a/framework/hello-dubbo/dubbo-demo-consumer/pom.xml
+++ b/framework/hello-dubbo/dubbo-demo-consumer/pom.xml
@@ -17,7 +17,19 @@
             <artifactId>dubbo-demo-api</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
-
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
     </dependencies>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+            </plugin>
+        </plugins>
+    </build>
 
 </project>
