--- a/framework/hello-dubbo/dubbo-demo-provider/src/main/resources/application.yml
+++ b/framework/hello-dubbo/dubbo-demo-provider/src/main/resources/application.yml
@@ -22,4 +22,6 @@ spring:
 
 dubbo:
   registry:
-    address: zookeeper://127.0.0.1:2181
+    address: zookeeper://${zookeeper.address:127.0.0.1}:2181
+  metadata-report:
+    address: redis://127.0.0.1:6379
