--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,8 @@
         <module>book</module>
         <module>framework</module>
         <module>java-spi-demo</module>
-<!--        <module>spi-demo-api</module>-->
+        <module>rpc-demo</module>
+        <!--        <module>spi-demo-api</module>-->
     </modules>
     <!--<groupId>xyz.wenjiesx.book</groupId>
     <artifactId>thinking-in-java</artifactId>
