简要的spring framework代码模拟实现 验证 bean维护, Transactional, IOC, aware, postProcessor

--- a/framework/pom.xml
+++ b/framework/pom.xml
@@ -17,6 +17,7 @@
         <module>my-spring-boot-starter-verify</module>
         <module>hello-dubbo</module>
         <module>fake-spring-boot-starter</module>
+        <module>simple-spring-framework</module>
     </modules>
 
 
